fix colors and spacing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 
 body {
-  @apply text-indigo-600;
+  @apply text-violet-300;
 }
 h1 {
   @apply text-2xl;
@@ -11,9 +11,6 @@ h2 {
 }
 h3 {
   @apply text-lg;
-}
-a {
-  @apply text-blue-600;
 }
 p {
   @apply mb-4
